# personal_chef_assistant

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  teste_streamlit.py
notebooks/: experiments.ipynb
src/agent/: __init__.py  config.py  factory.py  prompts.py  tools.py
