[project]
name = "personal-chef-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "langsmith>=0.5.0",
    "streamlit>=1.52.2",
    "tavily>=1.1.0",
    "watchdog>=6.0.0",
]
